# simple-dep-cache

./: CHANGELOG.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: publish-pypi.yaml  test.yml
src/simple_dep_cache/: __init__.py  backends.py  config.py  context.py  decorators.py  events.py  factories.py  fakes.py  manager.py  redis_backends.py  types.py  utils.py
tests/: test_async_cache_manager.py  test_cache_manager.py  test_config.py  test_context.py  test_decorators.py  test_end_to_end_redis_simple.py  test_fakes.py  test_json_serializer.py  test_redis_backends.py  test_silent_backend_errors.py  test_types.py
