[project]
name = "simple-dep-cache"
# version = "0.1.0"
dynamic = ["version"]
description = "Redis-based caching library with intelligent dependency tracking for Python applications"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["cache", "redis", "dependency", "cache invalidation"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "redis",
]

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[project.optional-dependencies]
fast-json = [
   "orjson",
]

[dependency-groups]
dev = [
    "ipython",
    "pytest",
    "pytest-asyncio",
    "fakeredis",
    "ruff",
    "pre-commit>=4.3.0",
]

[project.urls]
Homepage = "https://github.com/tintty1/simple-dep-cache"
Repository = "https://github.com/tintty1/simple-dep-cache"
Documentation = "https://github.com/tintty1/simple-dep-cache"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = [
    "tests",
]
python_files = [
    "test_*.py",
]
markers = [
    "redis_e2e: marks tests as Redis end-to-end tests that require a running Redis instance",
]

